<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlt_splash_body"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroud" >

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/text_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:maxLines="3"
        android:maxWidth="250dp"
        android:text="@string/app_name"
        android:textColor="#366596"
        android:textSize="40sp"
        android:typeface="monospace" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:orientation="vertical" >

        <TextView
            style="@style/text_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_company"
            android:textColor="#366596" />

        <TextView
            style="@style/text_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_copyright_date"
            android:textColor="#dd787878" />

        <TextView
            style="@style/text_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_all_right"
            android:textColor="#dd787878" />
    </LinearLayout>

</RelativeLayout>