<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_backgroud"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_pl_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:text="@string/popup_login_title"
        android:textColor="#52BFE7"
        android:textSize="25sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FEBF40" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minWidth="300.0dip"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <AutoCompleteTextView
            android:id="@+id/at_pl_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit"
            android:focusable="true"
            android:hint="@string/hint_account"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="8dip"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#B9B9B9"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_pl_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/login_edit"
            android:focusable="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:nextFocusUp="@id/at_pl_account"
            android:padding="8dip"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#B9B9B9"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#E5E5E5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="50.0dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_pl_login"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/login_btn_bg"
            android:gravity="center"
            android:text="@string/global_login"
            android:textColor="#000"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <TextView
            android:id="@+id/tv_pl_cancel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/login_btn_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>