<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dip"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="240dip"
        android:layout_height="fill_parent"
        android:background="#ff313131"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llt_unlogin"
            android:layout_width="240dip"
            android:layout_height="45.0dip"
            android:background="#ff313131"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/menu_item_bg"
                android:clickable="true"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/global_login"
                android:textColor="#ff959595"
                android:textSize="20.0sp" />

            <View
                android:layout_width="2.0dip"
                android:layout_height="fill_parent"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/menu_item_bg"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/global_signup"
                android:textColor="#ff959595"
                android:textSize="18.0sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="20dip"
            android:textColor="#ff959595"
            android:textSize="18.0sp"
            android:visibility="gone" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_index"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_index"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_chemistry"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_chem"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_chemistry"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_law"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_law"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_law"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_standard"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_standard"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_standard"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_operation"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_operation"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_operation"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_law_basis"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_basic"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_law_basis"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_equipment"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_equipment"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_equipment"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_licensing"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_company"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_licensing"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />

        <TextView
            android:id="@+id/tv_contacts"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_item_bg"
            android:clickable="true"
            android:drawableLeft="@drawable/menu_contact"
            android:drawablePadding="10.0dip"
            android:gravity="center_vertical"
            android:padding="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/global_contacts"
            android:textColor="#ff959595"
            android:textSize="18.0sp" />

        <View
            android:layout_width="240dip"
            android:layout_height="2.0dip"
            android:background="@drawable/ic_shelf_category_divider" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="220dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5.0dip"
        android:background="@drawable/exit_btn_bg"
        android:clickable="true"
        android:drawablePadding="10.0dip"
        android:gravity="center"
        android:padding="10.0dip"
        android:paddingLeft="15.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/global_exit"
        android:textColor="#ff959595"
        android:textSize="18.0sp" />

</RelativeLayout>